Add IoT SAS support (untested at this moment)

--- a/build.gradle
+++ b/build.gradle
@@ -280,6 +280,13 @@ project(':factom-client-offline-signing') {
         compile project(':factom-client-impl')
         compile "net.i2p.crypto:eddsa:$libVersions.eddsa"
         compileOnly "javax.enterprise:cdi-api:$libVersions.jee.cdiApi"
+      }
+}
+project(':iot-sas') {
+    apply plugin: "java"
+    dependencies {
+        compile project(':factom-client-offline-signing')
+        compile 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
     }
 }
 
@@ -397,13 +404,16 @@ project(':factom-client-tests') {
         testCompile project(':service-providers:logger-slf4j')
         testCompile project(':factom-client-impl')
         testCompile project(':factom-client-offline-signing')
-//        testCompile project(':service-providers:json-converter-gson')
-        testCompile project(':service-providers:json-converter-jee')
+        testCompile project(':service-providers:json-converter-gson')
+//        testCompile project(':service-providers:json-converter-jee')
         testCompile "org.mock-server:mockserver-netty:5.4.1"
         testCompile "org.mock-server:mockserver-client-java:5.4.1"
         testCompile "org.glassfish:javax.json:$testVersions.jee.javaxJson"
         testCompile "org.eclipse:yasson:$testVersions.jee.yasson"
         testCompile "junit:junit:$testVersions.junit4"
+        testCompile 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
+
+//        testCompile "com.github.purejavacomm:purejavacomm:1.0.2.RELEASE"
 
     }
 }
