--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,4 +8,4 @@ phases:
     commands:
        - echo "${CODEBUILD_WEBHOOK_HEAD_REF}"
        - aws s3 cp s3://nexuscredentials-cm/maven/settings.xml .
-       - mvn clean install deploy -s settings.xml
+       - gradle build -s settings.xml
