--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ phases:
   build:
     commands:
        - echo "${CODEBUILD_WEBHOOK_HEAD_REF}"
+       - chmod +x ./gradlew  
        - aws s3 cp s3://nexuscredentials-cms/maven/settings.xml .
-       - gradle build
-       - gradle publishToMavenLocal -s settings.xml  
+       - aws s3 cp s3://nexuscredentials-cms/maven/gradle.properties .
+       - ./gradlew build --no-daemon  
+       - ./gradlew publishToMavenLocal --no-daemon  
