--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ buildscript {
 }
 
 
-
 plugins {
     id 'org.asciidoctor.convert' version '1.5.6' apply false
     id 'org.springframework.boot' version '2.0.5.RELEASE' apply false
@@ -77,10 +76,8 @@ ext {
 }
 
 
-
 allprojects {
     apply plugin: "maven"
-
 
 
     group = "org.blockchain-innovation.factom.client"
@@ -117,9 +114,10 @@ subprojects {
         publications {
             mavenJava(MavenPublication) {
                 from components.java
-                artifact sourceJar
-                artifact javadocJar
-
+                afterEvaluate {
+                    artifact sourceJar
+                    artifact javadocJar
+                }
                 /*  pom {
 
 
@@ -231,9 +229,6 @@ subprojects {
         }
     }
 }
-
-
-
 
 
 task cleanReports(type: Delete) {
