--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,8 @@ phases:
        - echo "${CODEBUILD_WEBHOOK_HEAD_REF}"
        - chmod +x ./gradlew  
        - aws s3 cp s3://nexuscredentials-cms/maven/settings.xml .
-       - aws s3 cp s3://nexuscredentials-cms/maven/gradle.properties ~
-       - ./gradlew build --no-daemon  
+       - mkdir ~/.gradle
+       - aws s3 cp s3://nexuscredentials-cms/maven/gradle.properties ~/.gradle
+       - aws s3 cp s3://nexuscredentials-cms/maven/gradle.encrypted.properties ~/.gradle
+       - ./gradlew build --no-daemon
        - ./gradlew publish --no-daemon
