--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
        - echo "${CODEBUILD_WEBHOOK_HEAD_REF}"
        - chmod +x ./gradlew  
        - aws s3 cp s3://nexuscredentials-cms/maven/settings.xml .
-       - mkdir ~/.gradle
+       - mkdir ~/.gradle -p
        - aws s3 cp s3://nexuscredentials-cms/maven/gradle.properties ~/.gradle
        - aws s3 cp s3://nexuscredentials-cms/maven/gradle.encrypted.properties ~/.gradle
        - ./gradlew build --no-daemon
