--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ ext {
     ]
 
     // the password needs to be specified via command line
-    repoUser = project.hasProperty('repoUser') ? project.getProperty('repoUser') : nexusUser
+    repoUser = project.hasProperty('repoUser') ? project.getProperty('repoUser') : credentials.nexusUser
     repoPass = project.hasProperty('repoPass') ? project.getProperty('repoPass') : credentials.nexusPassword
 }
 
