PROOF-11 Update gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,7 @@
 /*
 // To declare projects as part of a multi-project build use the 'include' method
 */
-include ':factom-client-api', ':factom-client-impl', ':factom-client-offline-signing', ':service-providers:logger-slf4j', ':service-providers:json-converter-gson', ':service-providers:json-converter-jee', ':factom-client-tests', ':frameworks:jee-support', ':frameworks:spring-boot-support', 'frameworks:osgi', ':docs', ':factom-did-entry-client'
+include ':factom-client-api', ':factom-client-impl', ':factom-client-offline-signing', ':service-providers:logger-slf4j', ':service-providers:json-converter-gson', ':service-providers:json-converter-jee', ':factom-client-tests', ':frameworks:jee-support', ':frameworks:spring-boot-support', ':frameworks:osgi', ':docs', ':factom-did-entry-client'
 rootProject.name = 'factom-java'
 
 
