--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ plugins {
     id 'org.springframework.boot' version '2.0.5.RELEASE' apply false
     id "com.athaydes.osgi-run" version "1.6.0" apply false
     id "org.dm.bundle" version "0.8.4" apply false
+    id "biz.aQute.bnd.builder" version "5.0.0" apply false
+
 }
 apply plugin: 'io.github.robwin.jgitflow'
 
@@ -68,7 +70,8 @@ ext {
             ":service-providers:json-converter-gson",
             ":service-providers:json-converter-jee",
             ":frameworks:jee-support",
-            ":frameworks:spring-boot-support"
+            ":frameworks:spring-boot-support",
+            ":factom-did-entry-client"
     ]
 
     // the password needs to be specified via command line
@@ -99,7 +102,7 @@ allprojects {
 
 subprojects {
     apply plugin: "checkstyle"
-    apply plugin: "findbugs"
+//    apply plugin: "findbugs"
     apply plugin: "pmd"
     apply plugin: "java"
     apply plugin: "maven-publish"
@@ -113,12 +116,13 @@ subprojects {
             mavenLocal()
         }
     }
+
     publishing {
         publications {
             mavenJava(MavenPublication) {
                 from components.java
-                artifact sourceJar
-                artifact javadocJar
+//                artifact sourceJar()
+//                artifact javadocJar()
 
                 /*  pom {
 
@@ -198,16 +202,16 @@ subprojects {
             html.destination file("${project(':').projectDir}/quality/reports/${project.name}-pmd.html")
         }
     }
-    tasks.withType(FindBugs) {
-        findbugs.sourceSets = [sourceSets.main]
-        ignoreFailures = false
-        excludeFilter = file("${project(':').projectDir}/quality/config/findbugs.exclude.xml")
-        reports {
-            xml.enabled = false
-            html.enabled = true
-            html.destination file("${project(':').projectDir}/quality/reports/${project.name}-findbugs.html")
-        }
-    }
+//    tasks.withType(FindBugs) {
+//        findbugs.sourceSets = [sourceSets.main]
+//        ignoreFailures = false
+//        excludeFilter = file("${project(':').projectDir}/quality/config/findbugs.exclude.xml")
+//        reports {
+//            xml.enabled = false
+//            html.enabled = true
+//            html.destination file("${project(':').projectDir}/quality/reports/${project.name}-findbugs.html")
+//        }
+//    }
     tasks.withType(Checkstyle) {
         checkstyle.sourceSets = [sourceSets.main]
         ignoreFailures = true
@@ -223,9 +227,9 @@ subprojects {
         dependsOn tasks.withType(Pmd).matching {
             !it.name.toLowerCase().contains("test")
         }
-        dependsOn tasks.withType(FindBugs).matching {
-            !it.name.toLowerCase().contains("test")
-        }
+//        dependsOn tasks.withType(FindBugs).matching {
+//            !it.name.toLowerCase().contains("test")
+//        }
         dependsOn tasks.withType(Checkstyle).matching {
             !it.name.toLowerCase().contains("test")
         }
@@ -371,7 +375,7 @@ project(':frameworks:osgi') {
 
     apply plugin: "java"
     apply plugin: "com.athaydes.osgi-run"
-    apply plugin: "org.dm.bundle"
+//    apply plugin: "org.dm.bundle"
 
     runOsgi {
         bundles += project
@@ -391,6 +395,16 @@ project(':frameworks:osgi') {
     }
 }
 
+project(':factom-did-entry-client') {
+    apply plugin: "java"
+//    apply plugin: 'org.openapi.generator'
+
+    dependencies {
+        compile project(':factom-client-api')
+
+    }
+}
+
 project(':factom-client-tests') {
     apply plugin: "java"
     dependencies {
@@ -404,6 +418,7 @@ project(':factom-client-tests') {
         testCompile "org.glassfish:javax.json:$testVersions.jee.javaxJson"
         testCompile "org.eclipse:yasson:$testVersions.jee.yasson"
         testCompile "junit:junit:$testVersions.junit4"
+
 
     }
 }
