--- a/factom-did-entry-client/build.gradle
+++ b/factom-did-entry-client/build.gradle
@@ -1,30 +1,63 @@
+plugins {
+    id 'java'
+    id 'maven'
+    id 'maven-publish'
+}
 
-group 'org.blockchain-innovation.factom.identity'
+group 'org.factomprotocol.identity'
 version '0.3.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
+sourceCompatibility = 11
 repositories {
     mavenLocal()
     google()
     jcenter()
     mavenCentral()
 }
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 
+}
+
+allprojects {
+    apply plugin: "maven"
+    group = "org.factomprotocol.identity"
+
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+}
 
 
 dependencies {
-    /*compile group: 'org.blockchain-innovation.factom.client', name: 'factom-client-impl', version: '0.2.2-SNAPSHOT'*/
-    compile project(':factom-client-impl')
-    compile group: 'decentralized-identity', name: 'did-common-java', version: '0.1-SNAPSHOT'
+    compile 'org.blockchain-innovation.factom.client:factom-client-api:0.3.0-SNAPSHOT'
+    compile 'org.blockchain-innovation.factom.client:factom-client-impl:0.3.0-SNAPSHOT'
+    compile 'org.blockchain-innovation.factom.client:factom-client-offline-signing:0.3.0-SNAPSHOT'
+    compile group: 'decentralized-identity', name: 'did-common-java', version: '0.2-SNAPSHOT'
     compile group: 'org.factomprotocol.identity', name: 'factom-did-models-java-gson', version: '0.3.0-SNAPSHOT'
-    testCompile project(':factom-client-offline-signing')
-    testCompile project(':service-providers:logger-slf4j')
-    testCompile project(':service-providers:json-converter-jee')
-    testCompile "org.mock-server:mockserver-netty:5.4.1"
-    testCompile "org.mock-server:mockserver-client-java:5.4.1"
-    testCompile "org.glassfish:javax.json:$testVersions.jee.javaxJson"
-    testCompile "org.eclipse:yasson:$testVersions.jee.yasson"
+    compile "javax.json.bind:javax.json.bind-api:1.0.0-RC2"
+    testCompile 'org.blockchain-innovation.factom.client:logger-slf4j:0.3.0-SNAPSHOT'
+    testCompile 'org.blockchain-innovation.factom.client:json-converter-jee:0.3.0-SNAPSHOT'
+    testCompile 'net.i2p.crypto:eddsa:0.3.0'
+    testCompile "org.glassfish:javax.json:1.1.2"
+    testCompile "org.eclipse:yasson:1.0.1"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.1")
+}
+test {
+    useJUnitPlatform()
 }
